--- a/ops-challenge-forked/index.html
+++ b/ops-challenge-forked/index.html
@@ -48,7 +48,11 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Eleanor Ballam</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="https://github.com/Ellieb303" target="_blank"> on GitHub </a>
+          <a href="https://github.com/Ellieb303/shecodes-week-6-hw"
+            >repository link
+          </a>
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
