--- a/ops-challenge-forked/index.html
+++ b/ops-challenge-forked/index.html
@@ -49,6 +49,7 @@
           This project was coded by
           <a href="#" target="_blank">Eleanor Ballam</a> and is
           <a href="https://github.com/Ellieb303" target="_blank"> on GitHub </a>
+          on this
           <a href="https://github.com/Ellieb303/shecodes-week-6-hw"
             >repository link
           </a>
