--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
           <a href="https://github.com/Ellieb303/shecodes-week-6-hw"
             >repository link
           </a>
-          and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          and hosted on Netlify at
+          <a
+            href="https://stirring-sunflower-9d5097.netlify.app/"
+            target="_blank"
+            >https://stirring-sunflower-9d5097.netlify.app</a
+          >
+          -
         </p>
       </footer>
     </div>
